--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <section id="hero" class="hero">
     <div class="hero-media">
       <video autoplay muted loop playsinline>
-        <source src="assets/MBW-1.web.mp4" type="video/mp4" />
+        <source src="assets/PropertyDesign.web.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="hero-copy">
@@ -478,8 +478,8 @@ FOOTER
       <h3>Sonny Sayi Solutions</h3>
       <p>Helping SMEs digitize operations—with websites, IT systems and CRM strategies that drive customer growth and operational clarity.</p>
       <div class="footer-social">
-        <a href="https://www.linkedin.com/in/sonny-sayi-160835a7/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=61577290837456" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.linkedin.com/in/sonny-sayi-160835a7/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61577290837456" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="mailto:info@sonnysayisolutions.co.ke" aria-label="Email"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
