--- a/contact.html
+++ b/contact.html
@@ -184,8 +184,8 @@
         <h3>Sonny Sayi Solutions</h3>
         <p>Helping SMEs digitize operations—with websites, IT systems and CRM strategies that drive customer growth and operational clarity.</p>
         <div class="footer-social">
-          <a href="https://www.linkedin.com/in/sonny-sayi-160835a7/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=61577290837456" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.linkedin.com/in/sonny-sayi-160835a7/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61577290837456" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a href="mailto:info@sonnysayisolutions.co.ke" aria-label="Email"><i class="fas fa-envelope"></i></a>
         </div>
       </div>
