--- a/index.html
+++ b/index.html
@@ -204,173 +204,176 @@
   </section>
 
 <!-- =========================
-PRICING SECTION (Refined)
+PRICING SECTION (Premium)
 ========================= -->
 <section id="pricing" class="pricing-section parallax">
   <div class="pricing-overlay"></div>
   <div class="pricing-content">
     <div class="section-header">
-      <h2>Clear, Value-Driven Pricing</h2>
-      <p>No hidden fees. No bloated features. Just what your business needs to grow.</p>
+      <h2>Structured Packages for Business Growth</h2>
+      <p>Each package is designed to give you measurable value. Choose the tier that aligns with your business growth goals.</p>
     </div>
 
     <div class="pricing-grid">
-      <!-- Basic Website -->
+
+      <!-- Foundation Presence -->
       <div class="pricing-card">
-        <h3>Basic Website</h3>
-        <div class="price">From <strong>65,000 Kshs</strong></div>
-        <p class="tagline">Professional online presence — fast, mobile-ready, lead-generating.</p>
+        <h3>Foundation Presence</h3>
+        <div class="price">From <strong>65,000 Ksh</strong></div>
+        <p class="tagline">Establish a credible, professional online presence.</p>
         <ul class="features">
-          <li><i class="fas fa-check"></i> 7 purpose-built pages</li>
-          <li><i class="fas fa-check"></i> Mobile-optimized design</li>
-          <li><i class="fas fa-check"></i> WhatsApp + contact form</li>
-          <li><i class="fas fa-check"></i> Branded brochure & social graphics</li>
+          <li><i class="fas fa-check"></i> Up to 7 structured pages</li>
+          <li><i class="fas fa-check"></i> Mobile-first responsive design</li>
+          <li><i class="fas fa-check"></i> Lead capture system (forms + WhatsApp)</li>
           <li><i class="fas fa-check"></i> Basic SEO setup</li>
+          <li><i class="fas fa-check"></i> Secure SSL deployment</li>
+          <li><i class="fas fa-check"></i> 3 revisions included</li>
         </ul>
+        <p class="scaling-note">Upgrade to Growth Platform as your business expands.</p>
         <a href="contact.html" class="btn-pricing">Get Started</a>
-        <button class="btn-toggle" aria-label="View more features">
-          <span>+ View Full Features</span>
-        </button>
-        <div class="extra-features" style="display: none;">
-          <ul>
-            <li><i class="fas fa-check"></i> Website analytics (Google)</li>
-            <li><i class="fas fa-check"></i> Professional email (you@business.co.ke)</li>
-            <li><i class="fas fa-check"></i> Secure cloud hosting</li>
-          </ul>
-        </div>
       </div>
 
-      <!-- Business Website -->
+      <!-- Growth Platform -->
       <div class="pricing-card popular">
         <div class="badge">Most Popular</div>
-        <h3>Business Website</h3>
-        <div class="price">From <strong>80,000 Kshs</strong></div>
-        <p class="tagline">For credibility, local SEO, and higher conversions.</p>
+        <h3>Growth Platform</h3>
+        <div class="price">From <strong>80,000 Ksh</strong></div>
+        <p class="tagline">Scale your visibility and conversions with a structured, conversion-focused site.</p>
         <ul class="features">
-          <li><i class="fas fa-check"></i> Up to 15 custom pages</li>
-          <li><i class="fas fa-check"></i> Brand-aligned visuals</li>
-          <li><i class="fas fa-check"></i> Advanced local SEO</li>
-          <li><i class="fas fa-check"></i> Google Business + social proof</li>
+          <li><i class="fas fa-check"></i> Up to 15 pages with strategic layout</li>
+          <li><i class="fas fa-check"></i> Conversion-focused design</li>
+          <li><i class="fas fa-check"></i> Advanced SEO setup & Google Business optimization</li>
+          <li><i class="fas fa-check"></i> Analytics & reporting</li>
+          <li><i class="fas fa-check"></i> Performance optimization</li>
+          <li><i class="fas fa-check"></i> 3–5 revisions included</li>
         </ul>
+        <p class="scaling-note">Upgrade to Commerce Platform when you start selling online.</p>
         <a href="contact.html" class="btn-pricing">Get Started</a>
-        <button class="btn-toggle" aria-label="View more features">
-          <span>+ View Full Features</span>
-        </button>
-        <div class="extra-features" style="display: none;">
-          <ul>
-            <li><i class="fas fa-check"></i> Clean, secure code (no plugins)</li>
-            <li><i class="fas fa-check"></i> Secure cloud hosting</li>
-            <li><i class="fas fa-check"></i> Ongoing support options</li>
-          </ul>
-        </div>
       </div>
 
-      <!-- E-commerce Website -->
+      <!-- Commerce Platform -->
       <div class="pricing-card">
-        <h3>E-commerce Website</h3>
-        <div class="price">From <strong>150,000 Kshs</strong></div>
-        <p class="tagline">Your 24/7 online store — secure, local, and scalable.</p>
+        <h3>Commerce Platform</h3>
+        <div class="price">From <strong>150,000 Ksh</strong></div>
+        <p class="tagline">A revenue-generating engine for your products or services.</p>
         <ul class="features">
-          <li><i class="fas fa-check"></i> 200+ products</li>
-          <li><i class="fas fa-check"></i> M-Pesa + card payments</li>
-          <li><i class="fas fa-check"></i> Live stock sync</li>
-          <li><i class="fas fa-check"></i> Customer accounts</li>
+          <li><i class="fas fa-check"></i> Product catalog with up to 200 products</li>
+          <li><i class="fas fa-check"></i> M-Pesa + card payment integration</li>
+          <li><i class="fas fa-check"></i> Customer account setup</li>
+          <li><i class="fas fa-check"></i> Inventory & order dashboard</li>
+          <li><i class="fas fa-check"></i> SEO-optimized product pages</li>
+          <li><i class="fas fa-check"></i> Analytics & reporting</li>
+          <li><i class="fas fa-check"></i> 3 redesigns before launch</li>
         </ul>
+        <p class="scaling-note">Add more products, payment methods, and accounts without rebuilding.</p>
         <a href="contact.html" class="btn-pricing">Get Started</a>
-        <button class="btn-toggle" aria-label="View more features">
-          <span>+ View Full Features</span>
-        </button>
-        <div class="extra-features" style="display: none;">
-          <ul>
-            <li><i class="fas fa-check"></i> No monthly fees</li>
-            <li><i class="fas fa-check"></i> SEO-optimized product pages</li>
-            <li><i class="fas fa-check"></i> Discounts & promotions</li>
-            <li><i class="fas fa-check"></i> Analytics + training</li>
-            <li><i class="fas fa-check"></i> Secure cloud hosting</li>
-          </ul>
-        </div>
       </div>
 
-      <!-- Custom Web Applications -->
+      <!-- Digital Systems & Automation -->
       <div class="pricing-card">
-        <h3>Custom Applications</h3>
-        <div class="price">From <strong>250,000 Kshs</strong></div>
-        <p class="tagline">Digital systems built around your unique workflow.</p>
+        <h3>Digital Systems & Automation</h3>
+        <div class="price">From <strong>250,000 Ksh</strong></div>
+        <p class="tagline">Custom systems to streamline operations and automate workflows.</p>
         <ul class="features">
-          <li><i class="fas fa-check"></i> Built for your industry</li>
-          <li><i class="fas fa-check"></i> Role-based dashboards</li>
-          <li><i class="fas fa-check"></i> Real-time reporting</li>
-          <li><i class="fas fa-check"></i> Live website sync</li>
+          <li><i class="fas fa-check"></i> Custom dashboards & reporting</li>
+          <li><i class="fas fa-check"></i> Role-based access & team management</li>
+          <li><i class="fas fa-check"></i> Workflow automation & notifications</li>
+          <li><i class="fas fa-check"></i> API integrations</li>
+          <li><i class="fas fa-check"></i> Secure cloud storage & backup</li>
+          <li><i class="fas fa-check"></i> 3 major redesigns included before launch</li>
         </ul>
+        <p class="scaling-note">Your system evolves with your business growth.</p>
         <a href="contact.html" class="btn-pricing">Get Started</a>
-        <button class="btn-toggle" aria-label="View more features">
-          <span>+ View Full Features</span>
-        </button>
-        <div class="extra-features" style="display: none;">
-          <ul>
-            <li><i class="fas fa-check"></i> Automated workflows</li>
-            <li><i class="fas fa-check"></i> Firebase-backed security</li>
-            <li><i class="fas fa-check"></i> API-ready & scalable</li>
-            <li><i class="fas fa-check"></i> Full training + docs</li>
-            <li><i class="fas fa-check"></i> Data backup & cloud hosting</li>
-          </ul>
-        </div>
       </div>
+
     </div>
+
+    <!-- Educational Note -->
+    <div class="pricing-education">
+      <h3>Why Choose a Structured Package?</h3>
+      <ul>
+        <li>Each tier is designed to match your business growth stage.</li>
+        <li>Clear deliverables and revisions included.</li>
+        <li>Upgrade paths available for future growth.</li>
+        <li>Invest once, scale seamlessly.</li>
+      </ul>
+    </div>
+
   </div>
 </section>
-
 <!-- =========================
-FAQ SECTION
+HOSTING & EMAIL SERVICES SECTION
 ========================= -->
-<section id="faq" class="faq-section">
+<section id="hosting" class="hosting-section">
   <div class="section-inner">
     <div class="section-header">
-      <h2>Common Questions—Answered Clearly</h2>
-      <p>We believe transparency builds trust. Here’s what you need to know.</p>
+      <h2>Secure Hosting & Professional Email</h2>
+      <p>Reliable infrastructure for your website and emails—fast, secure, and scalable.</p>
     </div>
 
-    <div class="faq-list">
-      <div class="faq-item">
-        <button class="faq-question" aria-expanded="false">
-          <h3>Why should I invest in a professional website instead of a cheap one?</h3>
-          <i class="fas fa-chevron-down"></i>
-        </button>
-        <div class="faq-answer" style="display: none;">
-          <p>Cheap websites often use bloated templates, lack SEO, and break on mobile. Ours are built clean, fast, and secure—with your business goals in mind. You’re not just buying a site; you’re investing in a lead-generation asset that lasts years.</p>
-        </div>
+    <div class="hosting-grid">
+
+      <!-- Business Hosting Standard -->
+      <div class="hosting-card">
+        <h3>Business Hosting Standard</h3>
+        <div class="price">From <strong>5,000 Ksh/year</strong></div>
+        <p class="tagline">Ideal for brochure and business websites.</p>
+        <ul class="features">
+          <li><i class="fas fa-check"></i> Secure cloud hosting</li>
+          <li><i class="fas fa-check"></i> SSL certificate included</li>
+          <li><i class="fas fa-check"></i> 1–3 professional emails</li>
+          <li><i class="fas fa-check"></i> Domain management</li>
+          <li><i class="fas fa-check"></i> Daily monitoring & basic backups</li>
+        </ul>
+        <p class="education-note">Perfect for websites that need consistent uptime and security without monthly hassle.</p>
+        <a href="contact.html" class="btn-hosting">Get Started</a>
       </div>
 
-      <div class="faq-item">
-        <button class="faq-question" aria-expanded="false">
-          <h3>Do you help with CRM or customer management tools?</h3>
-          <i class="fas fa-chevron-down"></i>
-        </button>
-        <div class="faq-answer" style="display: none;">
-          <p>Yes. We guide businesses through the process of adopting CRM systems—like Salesforce—or building custom tools to track leads and customers. We focus on simplicity, integration, and real-world use—not complexity.</p>
-        </div>
+      <!-- Business Hosting Plus -->
+      <div class="hosting-card popular">
+        <div class="badge">Recommended</div>
+        <h3>Business Hosting Plus</h3>
+        <div class="price">From <strong>8,000 Ksh/year</strong></div>
+        <p class="tagline">For ecommerce or higher-traffic websites needing extra power.</p>
+        <ul class="features">
+          <li><i class="fas fa-check"></i> Dedicated resource allocation</li>
+          <li><i class="fas fa-check"></i> Up to 10 professional emails</li>
+          <li><i class="fas fa-check"></i> Daily backups & enhanced security</li>
+          <li><i class="fas fa-check"></i> Spam protection</li>
+          <li><i class="fas fa-check"></i> Priority technical support</li>
+        </ul>
+        <p class="education-note">Handles growth and higher traffic while keeping your website and emails secure and fast.</p>
+        <a href="contact.html" class="btn-hosting">Get Started</a>
       </div>
 
-      <div class="faq-item">
-        <button class="faq-question" aria-expanded="false">
-          <h3>Will my website help me rank on Google?</h3>
-          <i class="fas fa-chevron-down"></i>
-        </button>
-        <div class="faq-answer" style="display: none;">
-          <p>Every site we build follows SEO best practices: clean code, fast loading, mobile optimization, and proper structure. For competitive keywords, we recommend our Business or Custom packages, which include advanced on-page SEO.</p>
-        </div>
+      <!-- Email Hosting Only -->
+      <div class="hosting-card">
+        <h3>Email Hosting Only</h3>
+        <div class="price">From <strong>3,000 Ksh/year</strong></div>
+        <p class="tagline">Professional email for your business domain.</p>
+        <ul class="features">
+          <li><i class="fas fa-check"></i> Custom domain email (you@business.co.ke)</li>
+          <li><i class="fas fa-check"></i> Webmail & device access</li>
+          <li><i class="fas fa-check"></i> Spam filtering & security</li>
+          <li><i class="fas fa-check"></i> 24/7 email support</li>
+        </ul>
+        <p class="education-note">Establish trust and professionalism with your own domain email address.</p>
+        <a href="contact.html" class="btn-hosting">Get Started</a>
       </div>
 
-      <div class="faq-item">
-        <button class="faq-question" aria-expanded="false">
-          <h3>How do you ensure long-term reliability?</h3>
-          <i class="fas fa-chevron-down"></i>
-        </button>
-        <div class="faq-answer" style="display: none;">
-          <p>We avoid unnecessary plugins, use modern frameworks, and follow secure coding standards. You’ll get a system that’s easy to update, hard to break, and built to scale—without hidden tech debt.</p>
-        </div>
-      </div>
     </div>
+
+    <!-- Educational Note -->
+    <div class="hosting-education">
+      <h3>Why Structured Hosting Matters</h3>
+      <ul>
+        <li>Ensures your website and emails are always available and secure.</li>
+        <li>Provides professional, reliable email communication.</li>
+        <li>Scalable plans that grow with your business.</li>
+        <li>Simple annual pricing without hidden fees.</li>
+      </ul>
+    </div>
+
   </div>
 </section>
 <!-- =========================
