--- a/service.html
+++ b/service.html
@@ -90,6 +90,9 @@
         <span>Micro case</span>
         A construction firm reduced repeated WhatsApp questions by clearly outlining services, timelines, and FAQs on their site — saving hours weekly.
       </div>
+      <a href="./web-development.html" class="service-btn">
+  Explore Web Development <i class="fa-solid fa-arrow-right" aria-hidden="true"></i>
+</a>
     </div>
     <div class="service-media">
       <img src="assets/digital-footer.gif" alt="Illustration of a structured website system with clear navigation and content flow">
