--- a/service.html
+++ b/service.html
@@ -119,8 +119,11 @@
 
       <div class="micro-case">
         <span>Micro case</span>
-        A small supplier gained more corporate inquiries after standardizing their logo, invoices, and online presence — without changing pricing.
+        A small supplier gained brand visibility  by just working on online presence — with just a tune up.
       </div>
+      <a href="./branding.html" class="service-btn">
+  Explore Branding & Visual Identity <i class="fa-solid fa-arrow-right" aria-hidden="true"></i>
+</a>
     </div>
     <div class="service-media">
       <img src="assets/Branding-Service.gif" alt="Brand identity system showing consistent colors, typography, and logo usage">
