--- a/service.html
+++ b/service.html
@@ -152,6 +152,9 @@
         <span>Micro case</span>
         A real estate agent recovered dormant leads by introducing simple follow-up reminders — closing deals previously forgotten.
       </div>
+      <a href="./crm&custom-systems.html" class="service-btn">
+  Explore CRM & Customer Systems <i class="fa-solid fa-arrow-right" aria-hidden="true"></i>
+</a>
     </div>
     <div class="service-media">
       <img src="assets/CRM-Workflow.gif" alt="Simple CRM interface showing lead tracking and follow-up reminders">
