--- a/service.html
+++ b/service.html
@@ -178,6 +178,9 @@
         <span>Micro case</span>
         A small office eliminated daily connectivity issues by restructuring their network — no new hardware needed.
       </div>
+      <a href="./it-network.html" class="service-btn">
+  Explore IT & Network Systems <i class="fa-solid fa-arrow-right" aria-hidden="true"></i>
+</a>
     </div>
     <div class="service-media">
       <img src="assets/Tech-infra.gif" alt="Network architecture diagram showing simplified, reliable setup">
