--- a/service.html
+++ b/service.html
@@ -88,7 +88,11 @@
 
       <div class="micro-case">
         <span>Micro case</span>
-        A construction firm reduced repeated WhatsApp questions by clearly outlining services, timelines, and FAQs on their site — saving hours weekly.
+        A medical supplies company was supplying a clinic that secured donor funding for equipment.
+        The donor was from another region and requested company details and product information online for verification.
+        The supplier had no website. No online catalogue. Nothing structured to share.
+        The donor chose another supplier who had a visible online presence and clear product listings.
+        The order was lost not because of pricing or quality, but because of lack of digital visibility.
       </div>
       <a href="./web-development.html" class="service-btn">
   Explore Web Development <i class="fa-solid fa-arrow-right" aria-hidden="true"></i>
