--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 
 <head>
+  
   <!-- =========================
   BASIC META
   ========================= -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LV1LB3ND4V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LV1LB3ND4V');
+</script>
 
   <!-- =========================
   SEO CORE
