--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LV1LB3ND4V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LV1LB3ND4V');
+</script>
   <title>Sonny Sayi Solutions | Portfolio</title>
   <meta name="description" content="Explore our portfolio of websites, branding, and IT infrastructure projects for Kenyan businesses." />
 
