--- a/service.html
+++ b/service.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LV1LB3ND4V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-LV1LB3ND4V');
+</script>
   <!-- SEO -->
   <title>Services | Sonny Sayi Solutions — Digital Systems for Serious Businesses</title>
   <meta name="description" content="Educational, system-driven digital services for Kenyan businesses. Websites, branding, CRM, and IT systems designed for clarity, reliability, and long-term growth." />
