--- a/web-development.html
+++ b/web-development.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LV1LB3ND4V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LV1LB3ND4V');
+</script>
   
   <title>Web Development for Growth-Focused Businesses | Sonny Sayi Solutions</title>
   <meta name="description" content="Structured web development for Kenyan businesses. We build digital infrastructure designed for visibility, credibility, and scalable growth."/>
@@ -12,6 +22,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./web-development.css" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LV1LB3ND4V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LV1LB3ND4V');
+</script>
 <body>
 
   <div class="scroll-progress" id="scrollProgress"></div>
